diesel-builders/tests/ui/mismatched_primary_key_types_error.stderr
error[E0271]: type mismatch resolving `<id as Typed>::Type == i64`
  --> tests/ui/mismatched_primary_key_types_error.rs:12:47
   |
12 | #[derive(Queryable, Selectable, Identifiable, TableModel)]
   |                                               ^^^^^^^^^^ type mismatch resolving `<id as Typed>::Type == i64`
   |
note: expected this to be `i64`
  --> tests/ui/mismatched_primary_key_types_error.rs:8:9
   |
 8 |     id: i32,
   |         ^^^
note: required by a bound in `diesel_builders::ForeignPrimaryKey::ReferencedTable`
  --> src/foreign_key.rs
   |
   |     type ReferencedTable: HasPrimaryKeyColumn<PrimaryKey: PrimaryKeyColumn<Type = <Self as Typed>::Type>>
   |                                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ForeignPrimaryKey::ReferencedTable`
   = note: this error originates in the derive macro `TableModel` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui/mismatched_primary_key_types_error.rs:12:47
   |
12 | #[derive(Queryable, Selectable, Identifiable, TableModel)]
   |                                               ^^^^^^^^^^
   |                                               |
   |                                               expected `&i32`, found `&i64`
   |                                               expected `&i32` because of return type
   |
   = note: expected reference `&i32`
              found reference `&i64`
   = note: this error originates in the derive macro `TableModel` (in Nightly builds, run with -Z macro-backtrace for more info)
